webyast.css - added .clearfix rule (fixes broken layout in patches)

--- a/webyast/app/assets/stylesheets/webyast.css
+++ b/webyast/app/assets/stylesheets/webyast.css
@@ -615,3 +615,5 @@ p.missing-permissions {
   min-width: 80px;
   line-height: normal;
   display:none; }
+
+.clearfix { clear:both; }
